[gd_scene format=4 uid="uid://qhal07t5as3h"]

[ext_resource type="Script" uid="uid://dy2qf66hypdis" path="res://levels/level_1.gd" id="1_dfjjl"]
[ext_resource type="PackedScene" uid="uid://bekgyhkx6sr0g" path="res://Grassland.tscn" id="2_at1ld"]
[ext_resource type="PackedScene" uid="uid://b8k380wmj0r1b" path="res://scenes/tile_map.tscn" id="3_sd18g"]
[ext_resource type="PackedScene" uid="uid://c0qjf0dlqv16d" path="res://scenes/player/player.tscn" id="4_vm7no"]
[ext_resource type="PackedScene" uid="uid://crctqc4agook1" path="res://scenes/coins.tscn" id="5_hbb88"]
[ext_resource type="PackedScene" uid="uid://caa0u38woucbh" path="res://scenes/enemy/enemy.tscn" id="6_wcjpl"]
[ext_resource type="PackedScene" uid="uid://cubeh1u76wbb2" path="res://scenes/heart_bar.tscn" id="7_5orea"]
[ext_resource type="AudioStream" uid="uid://bkpo804gnmva2" path="res://Casual Game Vol 2/Track 1 (Let's Go).wav" id="8_0ourt"]
[ext_resource type="PackedScene" uid="uid://b33rl3ccafxjn" path="res://scenes/next_level.tscn" id="9_at1ld"]

[node name="Level2" type="Node2D" unique_id=61020778]
script = ExtResource("1_dfjjl")

[node name="Node2D2" parent="." unique_id=251779508 instance=ExtResource("2_at1ld")]

[node name="Node2D" type="Node2D" parent="." unique_id=1191682755]

[node name="TileMap" parent="." unique_id=742965699 instance=ExtResource("3_sd18g")]
position = Vector2(-1, 96)
tile_map_data = PackedByteArray("AABVAA0AAAAHAAQAAABVAAwAAAAFAAUAAABVAAsAAAAFAAUAAABVAAoAAAAFAAIAAABVAAkAAAAFAAIAAABVAAgAAAAFAAIAAABVAAcAAAAHAAMAAABUAA0AAAAGAAQAAABUAAwAAAAEAAUAAABUAAsAAAAEAAUAAABUAAoAAAAEAAIAAABUAAkAAAAEAAUAAABUAAgAAAAEAAUAAABUAAcAAAAEAAEAAABTAA0AAAACAAQAAABTAAwAAAAEAAQAAABTAAsAAAAEAAUAAABTAAoAAAAEAAQAAABTAAkAAAAEAAQAAABTAAgAAAAEAAQAAABTAAcAAAAEAAEAAABSAA0AAAAGAAQAAABSAAwAAAAEAAMAAABSAAsAAAAEAAQAAABSAAoAAAAEAAUAAABSAAkAAAAEAAMAAABSAAgAAAAEAAQAAABSAAcAAAACAAMAAABRAA0AAAAEAAYAAABRAAwAAAAEAAUAAABRAAsAAAAEAAUAAABRAAoAAAAEAAUAAABRAAkAAAAEAAUAAABRAAgAAAAEAAQAAABRAAcAAAAEAAEAAABQAA0AAAAEAAYAAABQAAwAAAAEAAMAAABQAAsAAAAEAAMAAABQAAoAAAAEAAIAAABQAAkAAAAEAAMAAABQAAgAAAAEAAQAAABQAAcAAAAGAAMAAABPAA0AAAACAAQAAABPAAwAAAAEAAUAAABPAAsAAAAEAAIAAABPAAoAAAAEAAMAAABPAAkAAAAEAAQAAABPAAgAAAAEAAMAAABPAAcAAAAEAAEAAABOAA0AAAAEAAYAAABOAAwAAAAEAAMAAABOAAsAAAAEAAQAAABOAAoAAAAEAAMAAABOAAkAAAAEAAQAAABOAAgAAAAEAAMAAABOAAcAAAAEAAEAAABNAA0AAAACAAQAAABNAAwAAAAEAAIAAABNAAsAAAAEAAUAAABNAAoAAAAEAAUAAABNAAkAAAAEAAQAAABNAAgAAAAEAAUAAABNAAcAAAAEAAEAAABMAA0AAAACAAQAAABMAAwAAAAEAAUAAABMAAsAAAAEAAIAAABMAAoAAAAEAAQAAABMAAkAAAAEAAIAAABMAAgAAAAEAAUAAABMAAcAAAAGAAMAAABLAA0AAAAGAAQAAABLAAwAAAAEAAQAAABLAAsAAAAEAAQAAABLAAoAAAAEAAQAAABLAAkAAAAEAAUAAABLAAgAAAAEAAMAAABLAAcAAAACAAMAAABKAA0AAAACAAQAAABKAAwAAAAEAAIAAABKAAsAAAAEAAUAAABKAAoAAAAEAAQAAABKAAkAAAAEAAIAAABKAAgAAAAEAAUAAABKAAcAAAAGAAMAAABJAA0AAAAEAAYAAABJAAwAAAAEAAUAAABJAAsAAAAEAAMAAABJAAoAAAAEAAMAAABJAAkAAAAEAAIAAABJAAgAAAAEAAQAAABJAAcAAAACAAMAAABIAA0AAAAEAAYAAABIAAwAAAAEAAQAAABIAAsAAAAEAAUAAABIAAoAAAAEAAMAAABIAAkAAAAEAAIAAABIAAgAAAAEAAMAAABIAAcAAAAEAAEAAABHAA0AAAAEAAYAAABHAAwAAAAEAAUAAABHAAsAAAAEAAIAAABHAAoAAAAEAAMAAABHAAkAAAAEAAMAAABHAAgAAAAEAAQAAABHAAcAAAAEAAEAAABGAA0AAAAEAAYAAABGAAwAAAAEAAQAAABGAAsAAAAEAAUAAABGAAoAAAAEAAUAAABGAAkAAAAEAAIAAABGAAgAAAAEAAIAAABGAAcAAAAEAAEAAABFAA0AAAAGAAQAAABFAAwAAAAEAAUAAABFAAsAAAAEAAUAAABFAAoAAAAEAAUAAABFAAkAAAAEAAIAAABFAAgAAAAEAAUAAABFAAcAAAAEAAEAAABEAA0AAAAGAAQAAABEAAwAAAAEAAIAAABEAAsAAAAEAAMAAABEAAoAAAAEAAIAAABEAAkAAAAEAAIAAABEAAgAAAAEAAMAAABEAAcAAAACAAMAAABDAA0AAAAEAAYAAABDAAwAAAAEAAMAAABDAAsAAAAEAAUAAABDAAoAAAAEAAIAAABDAAkAAAAEAAIAAABDAAgAAAAEAAMAAABDAAcAAAAGAAMAAABCAA0AAAACAAQAAABCAAwAAAAEAAUAAABCAAsAAAAEAAUAAABCAAoAAAAEAAMAAABCAAkAAAAEAAMAAABCAAgAAAAEAAUAAABCAAcAAAAGAAMAAABBAA0AAAACAAQAAABBAAwAAAAEAAQAAABBAAsAAAAEAAIAAABBAAoAAAAEAAMAAABBAAkAAAAEAAIAAABBAAgAAAAEAAIAAABBAAcAAAACAAMAAABAAA0AAAAEAAYAAABAAAwAAAAEAAMAAABAAAsAAAAEAAMAAABAAAoAAAAEAAMAAABAAAkAAAAEAAUAAABAAAgAAAAEAAIAAABAAAcAAAACAAMAAAA/AA0AAAACAAQAAAA/AAwAAAAEAAUAAAA/AAsAAAAEAAQAAAA/AAoAAAAEAAMAAAA/AAkAAAAEAAUAAAA/AAgAAAAEAAQAAAA/AAcAAAAEAAEAAAA+AA0AAAAGAAQAAAA+AAwAAAAEAAQAAAA+AAsAAAAEAAQAAAA+AAoAAAAEAAUAAAA+AAkAAAAEAAIAAAA+AAgAAAAEAAIAAAA+AAcAAAAEAAEAAAA9AA0AAAAGAAQAAAA9AAwAAAAEAAQAAAA9AAsAAAAEAAIAAAA9AAoAAAAEAAIAAAA9AAkAAAAEAAIAAAA9AAgAAAAEAAUAAAA9AAcAAAACAAMAAAA8AA0AAAAGAAQAAAA8AAwAAAAEAAQAAAA8AAsAAAAEAAQAAAA8AAoAAAAEAAMAAAA8AAkAAAAEAAIAAAA8AAgAAAAEAAIAAAA8AAcAAAACAAMAAAA7AA0AAAACAAQAAAA7AAwAAAAEAAQAAAA7AAsAAAAEAAUAAAA7AAoAAAAEAAQAAAA7AAkAAAAEAAUAAAA7AAgAAAAEAAUAAAA7AAcAAAACAAMAAAA6AA0AAAACAAQAAAA6AAwAAAAEAAMAAAA6AAsAAAAEAAIAAAA6AAoAAAAEAAQAAAA6AAkAAAAEAAQAAAA6AAgAAAAEAAMAAAA6AAcAAAACAAMAAAA5AA0AAAAGAAQAAAA5AAwAAAAEAAQAAAA5AAsAAAAEAAMAAAA5AAoAAAAEAAQAAAA5AAkAAAAEAAUAAAA5AAgAAAAEAAQAAAA5AAcAAAAEAAEAAAA4AA0AAAAGAAQAAAA4AAwAAAAEAAQAAAA4AAsAAAAEAAUAAAA4AAoAAAAEAAIAAAA4AAkAAAAEAAMAAAA4AAgAAAAEAAMAAAA4AAcAAAAEAAEAAAA3AA0AAAAGAAQAAAA3AAwAAAAEAAMAAAA3AAsAAAAEAAUAAAA3AAoAAAAEAAQAAAA3AAkAAAAEAAQAAAA3AAgAAAAEAAMAAAA3AAcAAAACAAMAAAA2AA0AAAAGAAQAAAA2AAwAAAAEAAUAAAA2AAsAAAAEAAIAAAA2AAoAAAAEAAIAAAA2AAkAAAAEAAUAAAA2AAgAAAAEAAMAAAA2AAcAAAAGAAMAAAA1AA0AAAAEAAYAAAA1AAwAAAAEAAIAAAA1AAsAAAAEAAQAAAA1AAoAAAAEAAUAAAA1AAkAAAAEAAUAAAA1AAgAAAAEAAUAAAA1AAcAAAAEAAEAAAA0AA0AAAACAAQAAAA0AAwAAAAEAAIAAAA0AAsAAAAEAAMAAAA0AAoAAAAEAAQAAAA0AAkAAAAEAAUAAAA0AAgAAAAEAAQAAAA0AAcAAAAGAAMAAAAzAA0AAAAGAAQAAAAzAAwAAAAEAAQAAAAzAAsAAAAEAAIAAAAzAAoAAAAEAAMAAAAzAAkAAAAEAAQAAAAzAAgAAAAEAAMAAAAzAAcAAAAGAAMAAAAyAA0AAAACAAQAAAAyAAwAAAAEAAIAAAAyAAsAAAAEAAUAAAAyAAoAAAAEAAQAAAAyAAkAAAAEAAMAAAAyAAgAAAAEAAMAAAAyAAcAAAAEAAEAAAAxAA0AAAAGAAQAAAAxAAwAAAAEAAMAAAAxAAsAAAAEAAQAAAAxAAoAAAAEAAUAAAAxAAkAAAAEAAMAAAAxAAgAAAAEAAIAAAAxAAcAAAAEAAEAAAAwAA0AAAACAAQAAAAwAAwAAAAEAAUAAAAwAAsAAAAEAAQAAAAwAAoAAAAEAAMAAAAwAAkAAAAEAAIAAAAwAAgAAAAEAAMAAAAwAAcAAAAEAAEAAAAvAA0AAAAGAAQAAAAvAAwAAAAEAAUAAAAvAAsAAAAEAAMAAAAvAAoAAAAEAAQAAAAvAAkAAAAEAAUAAAAvAAgAAAAEAAQAAAAvAAcAAAACAAMAAAAuAA0AAAACAAQAAAAuAAwAAAAEAAIAAAAuAAsAAAAEAAUAAAAuAAoAAAAEAAMAAAAuAAkAAAAEAAIAAAAuAAgAAAAEAAIAAAAuAAcAAAAGAAMAAAAtAA0AAAACAAQAAAAtAAwAAAAEAAMAAAAtAAsAAAAEAAMAAAAtAAoAAAAEAAQAAAAtAAkAAAAEAAMAAAAtAAgAAAAEAAIAAAAtAAcAAAACAAMAAAAsAA0AAAAGAAQAAAAsAAwAAAAEAAQAAAAsAAsAAAAEAAUAAAAsAAoAAAAEAAQAAAAsAAkAAAAEAAMAAAAsAAgAAAAEAAQAAAAsAAcAAAAEAAEAAAArAA0AAAAEAAYAAAArAAwAAAAEAAQAAAArAAsAAAAEAAMAAAArAAoAAAAEAAIAAAArAAkAAAAEAAIAAAArAAgAAAAEAAUAAAArAAcAAAACAAMAAAAqAA0AAAAEAAYAAAAqAAwAAAAEAAIAAAAqAAsAAAAEAAUAAAAqAAoAAAAEAAMAAAAqAAkAAAAEAAUAAAAqAAgAAAAEAAIAAAAqAAcAAAAGAAMAAAApAA0AAAACAAQAAAApAAwAAAAEAAUAAAApAAsAAAAEAAMAAAApAAoAAAAEAAQAAAApAAkAAAAEAAUAAAApAAgAAAAEAAIAAAApAAcAAAACAAMAAAAoAA0AAAAEAAYAAAAoAAwAAAAEAAUAAAAoAAsAAAAEAAQAAAAoAAoAAAAEAAMAAAAoAAkAAAAEAAUAAAAoAAgAAAAEAAQAAAAoAAcAAAACAAMAAAAnAA0AAAAEAAYAAAAnAAwAAAAEAAIAAAAnAAsAAAAEAAUAAAAnAAoAAAAEAAIAAAAnAAkAAAAEAAMAAAAnAAgAAAAEAAIAAAAnAAcAAAAGAAMAAAAmAA0AAAAGAAQAAAAmAAwAAAAEAAMAAAAmAAsAAAAEAAQAAAAmAAoAAAAEAAUAAAAmAAkAAAAEAAMAAAAmAAgAAAAEAAUAAAAmAAcAAAACAAMAAAAlAA0AAAACAAQAAAAlAAwAAAAEAAQAAAAlAAsAAAAEAAMAAAAlAAoAAAAEAAQAAAAlAAkAAAAEAAIAAAAlAAgAAAAEAAQAAAAlAAcAAAACAAMAAAAkAA0AAAAEAAYAAAAkAAwAAAAEAAIAAAAkAAsAAAAEAAMAAAAkAAoAAAAEAAIAAAAkAAkAAAAEAAMAAAAkAAgAAAAEAAMAAAAkAAcAAAACAAMAAAAjAA0AAAAGAAQAAAAjAAwAAAAEAAIAAAAjAAsAAAAEAAMAAAAjAAoAAAAEAAUAAAAjAAkAAAAEAAUAAAAjAAgAAAAEAAMAAAAjAAcAAAACAAMAAAAiAA0AAAAGAAQAAAAiAAwAAAAEAAQAAAAiAAsAAAAEAAMAAAAiAAoAAAAEAAQAAAAiAAkAAAAEAAQAAAAiAAgAAAAEAAIAAAAiAAcAAAAGAAMAAAAhAA0AAAAGAAQAAAAhAAwAAAAEAAUAAAAhAAsAAAAEAAQAAAAhAAoAAAAEAAQAAAAhAAkAAAAEAAIAAAAhAAgAAAAEAAQAAAAhAAcAAAACAAMAAAAgAA0AAAACAAQAAAAgAAwAAAAEAAUAAAAgAAsAAAAEAAIAAAAgAAoAAAAEAAIAAAAgAAkAAAAEAAIAAAAgAAgAAAAEAAMAAAAgAAcAAAACAAMAAAAfAA0AAAACAAQAAAAfAAwAAAAEAAQAAAAfAAsAAAAEAAIAAAAfAAoAAAAEAAIAAAAfAAkAAAAEAAUAAAAfAAgAAAAEAAIAAAAfAAcAAAAEAAEAAAAeAA0AAAAGAAQAAAAeAAwAAAAEAAIAAAAeAAsAAAAEAAMAAAAeAAoAAAAEAAMAAAAeAAkAAAAEAAUAAAAeAAgAAAAEAAIAAAAeAAcAAAACAAMAAAAdAA0AAAAEAAYAAAAdAAwAAAAEAAQAAAAdAAsAAAAEAAMAAAAdAAoAAAAEAAIAAAAdAAkAAAAEAAMAAAAdAAgAAAAEAAUAAAAdAAcAAAACAAMAAAAcAA0AAAACAAQAAAAcAAwAAAAEAAUAAAAcAAsAAAAEAAIAAAAcAAoAAAAEAAIAAAAcAAkAAAAEAAIAAAAcAAgAAAAEAAUAAAAcAAcAAAAGAAMAAAAbAA0AAAACAAQAAAAbAAwAAAAEAAQAAAAbAAsAAAAEAAQAAAAbAAoAAAAEAAIAAAAbAAkAAAAEAAQAAAAbAAgAAAAEAAQAAAAbAAcAAAAEAAEAAAAaAA0AAAACAAQAAAAaAAwAAAAEAAQAAAAaAAsAAAAEAAIAAAAaAAoAAAAEAAIAAAAaAAkAAAAEAAQAAAAaAAgAAAAEAAMAAAAaAAcAAAAGAAMAAAAZAA0AAAAEAAYAAAAZAAwAAAAEAAUAAAAZAAsAAAAEAAIAAAAZAAoAAAAEAAQAAAAZAAkAAAAEAAQAAAAZAAgAAAAEAAIAAAAZAAcAAAAEAAEAAAAYAA0AAAAEAAYAAAAYAAwAAAAEAAIAAAAYAAsAAAAEAAUAAAAYAAoAAAAEAAUAAAAYAAkAAAAEAAMAAAAYAAgAAAAEAAIAAAAYAAcAAAACAAMAAAAXAA0AAAAEAAYAAAAXAAwAAAAEAAQAAAAXAAsAAAAEAAQAAAAXAAoAAAAEAAMAAAAXAAkAAAAEAAUAAAAXAAgAAAAEAAMAAAAXAAcAAAAEAAEAAAAWAA0AAAACAAQAAAAWAAwAAAAEAAIAAAAWAAsAAAAEAAQAAAAWAAoAAAAEAAQAAAAWAAkAAAAEAAIAAAAWAAgAAAAEAAMAAAAWAAcAAAAEAAEAAAAVAA0AAAAGAAQAAAAVAAwAAAAEAAIAAAAVAAsAAAAEAAUAAAAVAAoAAAAEAAMAAAAVAAkAAAAEAAQAAAAVAAgAAAAEAAQAAAAVAAcAAAACAAMAAAAUAA0AAAAEAAYAAAAUAAwAAAAEAAQAAAAUAAsAAAAEAAUAAAAUAAoAAAAEAAQAAAAUAAkAAAAEAAQAAAAUAAgAAAAEAAMAAAAUAAcAAAAEAAEAAAATAA0AAAAGAAQAAAATAAwAAAAEAAQAAAATAAsAAAAEAAQAAAATAAoAAAAEAAQAAAATAAkAAAAEAAQAAAATAAgAAAAEAAMAAAATAAcAAAAEAAEAAAASAA0AAAAGAAQAAAASAAwAAAAEAAMAAAASAAsAAAAEAAQAAAASAAoAAAAEAAQAAAASAAkAAAAEAAIAAAASAAgAAAAEAAUAAAASAAcAAAAGAAMAAAARAA0AAAACAAQAAAARAAwAAAAEAAMAAAARAAsAAAAEAAUAAAARAAoAAAAEAAUAAAARAAkAAAAEAAUAAAARAAgAAAAEAAMAAAARAAcAAAAEAAEAAAAQAA0AAAAGAAQAAAAQAAwAAAAEAAQAAAAQAAsAAAAEAAMAAAAQAAoAAAAEAAQAAAAQAAkAAAAEAAUAAAAQAAgAAAAEAAUAAAAQAAcAAAACAAMAAAAPAA0AAAAGAAQAAAAPAAwAAAAEAAIAAAAPAAsAAAAEAAMAAAAPAAoAAAAEAAQAAAAPAAkAAAAEAAQAAAAPAAgAAAAEAAMAAAAPAAcAAAACAAMAAAAOAA0AAAAEAAYAAAAOAAwAAAAEAAUAAAAOAAsAAAAEAAUAAAAOAAoAAAAEAAUAAAAOAAkAAAAEAAMAAAAOAAgAAAAEAAMAAAAOAAcAAAAGAAMAAAANAA0AAAACAAQAAAANAAwAAAAEAAUAAAANAAsAAAAEAAQAAAANAAoAAAAEAAIAAAANAAkAAAAEAAMAAAANAAgAAAAEAAQAAAANAAcAAAACAAMAAAAMAA0AAAAEAAYAAAAMAAwAAAAEAAQAAAAMAAsAAAAEAAUAAAAMAAoAAAAEAAMAAAAMAAkAAAAEAAUAAAAMAAgAAAAEAAQAAAAMAAcAAAAGAAMAAAALAA0AAAAGAAQAAAALAAwAAAAEAAMAAAALAAsAAAAEAAIAAAALAAoAAAAEAAMAAAALAAkAAAAEAAMAAAALAAgAAAAEAAQAAAALAAcAAAAEAAEAAAAKAA0AAAACAAQAAAAKAAwAAAAEAAQAAAAKAAsAAAAEAAIAAAAKAAoAAAAEAAIAAAAKAAkAAAAEAAIAAAAKAAgAAAAEAAUAAAAKAAcAAAAGAAMAAAAJAA0AAAAEAAYAAAAJAAwAAAAEAAIAAAAJAAsAAAAEAAUAAAAJAAoAAAAEAAIAAAAJAAkAAAAEAAUAAAAJAAgAAAAEAAQAAAAJAAcAAAAEAAEAAAAIAA0AAAAEAAYAAAAIAAwAAAAEAAMAAAAIAAsAAAAEAAIAAAAIAAoAAAAEAAIAAAAIAAkAAAAEAAMAAAAIAAgAAAAEAAUAAAAIAAcAAAACAAMAAAAHAA0AAAAGAAQAAAAHAAwAAAAEAAUAAAAHAAsAAAAEAAIAAAAHAAoAAAAEAAMAAAAHAAkAAAAEAAIAAAAHAAgAAAAEAAIAAAAHAAcAAAACAAMAAAAGAA0AAAAGAAQAAAAGAAwAAAAEAAQAAAAGAAsAAAAEAAQAAAAGAAoAAAAEAAQAAAAGAAkAAAAEAAMAAAAGAAgAAAAEAAUAAAAGAAcAAAACAAMAAAAFAA0AAAAEAAYAAAAFAAwAAAAEAAIAAAAFAAsAAAAEAAQAAAAFAAoAAAAEAAMAAAAFAAkAAAAEAAIAAAAFAAgAAAAEAAIAAAAFAAcAAAACAAMAAAAEAA0AAAACAAQAAAAEAAwAAAAEAAQAAAAEAAsAAAAEAAIAAAAEAAoAAAAEAAMAAAAEAAkAAAAEAAUAAAAEAAgAAAAEAAMAAAAEAAcAAAAGAAMAAAADAA0AAAAGAAQAAAADAAwAAAAEAAQAAAADAAsAAAAEAAIAAAADAAoAAAAEAAMAAAADAAkAAAAEAAIAAAADAAgAAAAEAAMAAAADAAcAAAAGAAMAAAACAA0AAAAGAAQAAAACAAwAAAAEAAQAAAACAAsAAAAEAAMAAAACAAoAAAAEAAUAAAACAAkAAAAEAAQAAAACAAgAAAAEAAQAAAACAAcAAAAEAAEAAAABAA0AAAAEAAYAAAABAAwAAAAEAAIAAAABAAsAAAAEAAMAAAABAAoAAAAEAAUAAAABAAkAAAAEAAIAAAABAAgAAAAEAAUAAAABAAcAAAAGAAMAAAAAAA0AAAABAAQAAAAAAAwAAAADAAIAAAAAAAsAAAADAAUAAAAAAAoAAAADAAUAAAAAAAkAAAADAAUAAAAAAAgAAAADAAIAAAAAAAcAAAABAAMAAAA=")

[node name="player" parent="." unique_id=372595501 instance=ExtResource("4_vm7no")]
position = Vector2(41, 71)

[node name="coins" parent="." unique_id=96727550 instance=ExtResource("5_hbb88")]
position = Vector2(220, 192)

[node name="coins2" parent="." unique_id=605842595 instance=ExtResource("5_hbb88")]
position = Vector2(305, 200)

[node name="coins3" parent="." unique_id=1461383848 instance=ExtResource("5_hbb88")]
position = Vector2(358, 200)

[node name="enemy2" parent="." unique_id=310500332 instance=ExtResource("6_wcjpl")]
position = Vector2(428, 191)

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=444672968]

[node name="heart_bar" parent="CanvasLayer" unique_id=141789641 instance=ExtResource("7_5orea")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." unique_id=553679885]
stream = ExtResource("8_0ourt")
autoplay = true

[node name="nextLevel" parent="." unique_id=1603984970 instance=ExtResource("9_at1ld")]
position = Vector2(604, 190)

[connection signal="health_changed" from="player" to="." method="_on_player_health_changed"]
[connection signal="reload_scene" from="player" to="." method="_on_player_reload_scene"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
